--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "moapp",
-  "version": "1.0.0",
+  "version": "1.0.8",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "eslint-config-rallycoding": "^3.2.0",
-    "expo": "^26.0.0",
+    "expo": "^27.0.1",
     "expo-analytics": "^1.0.7",
     "lodash": "^4.17.5",
     "native-base": "^2.4.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react": "^16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-device-info": "^0.21.5",
     "react-native-easy-grid": "^0.1.17",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^0.19.0",
     "react-native-google-analytics": "^1.3.2",
     "react-native-htmlview": "^0.12.1",
     "react-native-indicators": "^0.12.0",
